feat: add LinalVector

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,9 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 include_directories(libs/imgui)
 
 set(SOURCE_FILES
-        src/imgui_impl_sdl.h
-        src/imgui_impl_sdl.cpp
-        src/main.cpp)
+        src/main.cpp
+        src/imgui_impl_sdl.cpp src/imgui_impl_sdl.h
+        src/linal/LinalVector.cpp src/linal/LinalVector.hpp
+        )
 
 add_executable(LinearAlgebra ${SOURCE_FILES})
