--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ set(SOURCE_FILES
         src/SDLImguiApplication.cpp src/SDLImguiApplication.hpp
         src/linal/DrawableLinalVector.cpp src/linal/DrawableLinalVector.hpp
         src/GUI/MainMenuBar.cpp src/GUI/MainMenuBar.hpp
-        src/GUI/AddVectorWindow.cpp src/GUI/AddVectorWindow.hpp)
+        src/GUI/AddVectorWindow.cpp src/GUI/AddVectorWindow.hpp
+        src/GUI/AddVectorSumWindow.cpp src/GUI/AddVectorSumWindow.hpp)
 
 add_executable(LinearAlgebra ${SOURCE_FILES})
